video64: exercise 13 parameterized tests